<resources>
    <string name="app_name">EduHub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="papers">Papers</string>
    <string name="downloads">Download Papers</string>
    <string name="upload">Upload Papers</string>
    <string name="com">Communicate</string>
    <string name="about">About Us</string>

</resources>
