<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/signup"
            android:title="@string/signup" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
    </group>
    <item android:title="@string/papers">
    <menu>
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/downloads"
            android:title="@string/downloads" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/upload"
            android:title="@string/upload" />
    </menu>
    </item>

    <item android:title="@string/com">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/about"
                android:width="24dp"
                android:height="24dp" />
        </menu>
    </item>

</menu>
